# ESP32-S3-DevkitC-1

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
src/: NeoPixel.cpp  NeoPixel.h  main.cpp  main.h  ssd1306.cpp  ssd1306.h
src_cam/: app_httpd.cpp  app_httpd.h  camera_index.h  camera_pins.h  main_cam.cpp  main_cam.h
src_lolin32/: main_lolin.cpp  main_lolin.h
src_test_led/: config.h  main.cpp  main.h
